<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="141dp"
            android:layout_height="166dp"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/username"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/logo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-81dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/phone_number"
            android:inputType="text"
            android:autofillHints="@string/phone_number"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/username"
            android:layout_marginBottom="-62dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="@string/password"
            android:background="@drawable/edittext_bg"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="-75dp"
            android:background="#ED3F40EA"
            android:hint="@string/login"
            android:textColor="#cdd8f1"
            />

        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/login_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-50dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:text="@string/OR"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="22dp"
            android:gravity="center"
            android:text="@string/Sign_up"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>