<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="LabelFor"
    tools:context=".VerifyOTP">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_otp_verify"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="395dp"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="257dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="monospace"
            android:gravity="bottom|center_horizontal|center_vertical"
            android:text="@string/VERIFY_msg"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="167dp"
            android:layout_marginLeft="167dp"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/progressbar"
            android:layout_marginBottom="-60dp"
            android:autofillHints=""
            android:background="@drawable/edittext_bg"
            android:inputType="number"
            tools:ignore="UnknownId" />

        <Button
            android:id="@+id/verify_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/otp"
            android:layout_marginLeft="134dp"
            android:layout_marginRight="134dp"
            android:layout_marginBottom="-81dp"
            android:background="#ED3F40EA"
            android:text="@string/VERIFY"
            android:textColor="#cdd8f1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>